# rust-chat-app

./: .env  Cargo.toml
src/: main.rs
src/handlers/: chat_handler.rs  mod.rs  text_handler.rs  user_handler.rs
src/models/: message.rs  mod.rs  room.rs  text.rs  user.rs
src/routes/: chat.rs  mod.rs  text_routes.rs  user.rs  ws.rs
src/services/: chat_service.rs  mod.rs  text_service.rs  user_service.rs
src/ws/: handler.rs
