[package]
name = "rust-todo-list"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
actix = "0.13"
actix-web = "4.9.0"
actix-web-actors = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-actix-native-tls", "uuid", "time"] }
bcrypt = "0.12"
log = "0.4"
env_logger = "0.10"
actix-cors = "0.6"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
lazy_static = "1.4"
bytes = "1.0"
